# name: test_snapshot[C:/Users/auburn/PycharmProjects/rd-indexer/orchard/vitals/test/fixtures\\Andrew_Huang_-_Know_You.rdzip]
  dict({
    'artist': 'Andrew Huang',
    'artist_tokens': list([
      'Andrew Huang',
    ]),
    'authors': list([
      'lugi',
    ]),
    'description': 'Two lonely stars, wandering in the dark...',
    'description_ct': list([
      dict({
        'color': 'default',
        'len': 42,
      }),
    ]),
    'difficulty': 1,
    'has_classics': True,
    'has_freetimes': True,
    'has_freezeshots': False,
    'has_holds': False,
    'has_oneshots': True,
    'has_skipshots': False,
    'has_squareshots': False,
    'has_window_dance': False,
    'hue': 0.47,
    'id': 'know-you-2zRJRCjPqJx',
    'last_updated': datetime.datetime(2020, 6, 24, 15, 6, 48),
    'max_bpm': 78.5,
    'min_bpm': 78.5,
    'rdlevel_sha1': 'f67aa02893fdb5ccfad0e445486bd6595801ecdc',
    'seizure_warning': False,
    'sha1': 'f2ad0f76bbfedf96bec3451eb9ead014accb3047',
    'single_player': True,
    'song': 'Know You',
    'song_ct': list([
      dict({
        'color': 'default',
        'len': 8,
      }),
    ]),
    'tags': list([
      'slow',
      'pop',
    ]),
    'two_player': True,
  })
# ---
# name: test_snapshot[C:/Users/auburn/PycharmProjects/rd-indexer/orchard/vitals/test/fixtures\\Hot_Freaks_-_Pull.rdzip]
  dict({
    'artist': 'Hot Freaks',
    'artist_tokens': list([
      'Hot Freaks',
    ]),
    'authors': list([
      'Labyrinth',
    ]),
    'description': "It's not something easy to admit.",
    'description_ct': list([
      dict({
        'color': 'default',
        'len': 33,
      }),
    ]),
    'difficulty': 1,
    'has_classics': True,
    'has_freetimes': True,
    'has_freezeshots': False,
    'has_holds': False,
    'has_oneshots': False,
    'has_skipshots': False,
    'has_squareshots': False,
    'has_window_dance': False,
    'hue': 0.88,
    'id': 'pull-EpgEYcGYPnU',
    'last_updated': datetime.datetime(2022, 6, 16, 0, 8, 26),
    'max_bpm': 89,
    'min_bpm': 88,
    'rdlevel_sha1': '9f576dd7ed2430c85d3fed185f259eb13b861669',
    'seizure_warning': False,
    'sha1': '8110b16e256491dcef0baf38bf155609afa60f55',
    'single_player': True,
    'song': 'Pull',
    'song_ct': list([
      dict({
        'color': 'default',
        'len': 4,
      }),
    ]),
    'tags': list([
      '1p',
      '2p',
      'gimmick',
    ]),
    'two_player': True,
  })
# ---
# name: test_snapshot[C:/Users/auburn/PycharmProjects/rd-indexer/orchard/vitals/test/fixtures\\JustMe_-_Swing.rdzip]
  dict({
    'artist': 'JustMe',
    'artist_tokens': list([
      'JustMe',
    ]),
    'authors': list([
      'Xeno',
    ]),
    'description': "Printin' twang.",
    'description_ct': list([
      dict({
        'color': 'default',
        'len': 15,
      }),
    ]),
    'difficulty': 1,
    'has_classics': True,
    'has_freetimes': True,
    'has_freezeshots': False,
    'has_holds': False,
    'has_oneshots': True,
    'has_skipshots': False,
    'has_squareshots': False,
    'has_window_dance': False,
    'hue': 0.08,
    'id': 'swing-c2QGYcw8GLq',
    'last_updated': datetime.datetime(2020, 12, 1, 18, 30, 20),
    'max_bpm': 130,
    'min_bpm': 130,
    'rdlevel_sha1': 'a8fd55c9e69a331a72f2c10a396ebde920b91315',
    'seizure_warning': False,
    'sha1': '3536805b7678006664d4f45856c4ce8959eb4a15',
    'single_player': True,
    'song': 'Swing',
    'song_ct': list([
      dict({
        'color': 'default',
        'len': 5,
      }),
    ]),
    'tags': list([
      'Printing',
      'CMYK',
      'Swing',
      'Bounce',
      'syncopation',
      'gimmick',
      '1p',
      '2p',
      'XenOnly',
    ]),
    'two_player': True,
  })
# ---
# name: test_snapshot[C:/Users/auburn/PycharmProjects/rd-indexer/orchard/vitals/test/fixtures\\Pseuu_-_ennui.rdzip]
  dict({
    'artist': 'Pseuu',
    'artist_tokens': list([
      'Pseuu',
    ]),
    'authors': list([
      'Pseuu',
    ]),
    'description': '''
      uh... no comment. level made in about 3-4 working hours
      
      - tricky oneshot patterns
      - skipshots
      - holds
    ''',
    'description_ct': list([
      dict({
        'color': 'default',
        'len': 102,
      }),
    ]),
    'difficulty': 2,
    'has_classics': False,
    'has_freetimes': True,
    'has_freezeshots': False,
    'has_holds': True,
    'has_oneshots': True,
    'has_skipshots': True,
    'has_squareshots': False,
    'has_window_dance': True,
    'hue': 0.42,
    'id': 'ennui-og-3VFE7LSmzSo',
    'last_updated': datetime.datetime(2022, 1, 3, 23, 19, 26),
    'max_bpm': 126,
    'min_bpm': 126,
    'rdlevel_sha1': 'c3435bd5e2362805b1ff15629757693ad985083c',
    'seizure_warning': False,
    'sha1': 'fd9bf6a51ce68fd87d3d6b269c792386f86c4c3b',
    'single_player': True,
    'song': 'ennui.ogg',
    'song_ct': list([
      dict({
        'color': 'default',
        'len': 9,
      }),
    ]),
    'tags': list([
      'chiptune',
      'short',
      '2p',
      'oneshots',
      'skipshots',
      'holds',
    ]),
    'two_player': True,
  })
# ---
# name: test_snapshot[C:/Users/auburn/PycharmProjects/rd-indexer/orchard/vitals/test/fixtures\\Quree_-_One_Forgotten_Night.rdzip]
  dict({
    'artist': 'Quree',
    'artist_tokens': list([
      'Quree',
    ]),
    'authors': list([
      'BluPen',
    ]),
    'description': "Patient experiencing sudden heart strain again. Solve the patient's concerns.",
    'description_ct': list([
      dict({
        'color': 'default',
        'len': 77,
      }),
    ]),
    'difficulty': 2,
    'has_classics': True,
    'has_freetimes': False,
    'has_freezeshots': False,
    'has_holds': False,
    'has_oneshots': True,
    'has_skipshots': False,
    'has_squareshots': False,
    'has_window_dance': True,
    'hue': 0.1,
    'id': 'one-forg-LJfg3wQANR7',
    'last_updated': datetime.datetime(2021, 5, 20, 21, 9, 22),
    'max_bpm': 173,
    'min_bpm': 100,
    'rdlevel_sha1': '9c1236f7939cc820b294dabe8904679701e1011b',
    'seizure_warning': False,
    'sha1': '365fc035a0024c9fe69d51e938fa3d6952b302db',
    'single_player': True,
    'song': 'One Forgotten Night',
    'song_ct': list([
      dict({
        'color': 'default',
        'len': 19,
      }),
    ]),
    'tags': list([
      'quree',
      'window dance',
    ]),
    'two_player': True,
  })
# ---
# name: test_snapshot[C:/Users/auburn/PycharmProjects/rd-indexer/orchard/vitals/test/fixtures\\Samario (Making A Mistake) - One Uncued Tresillo.rdzip]
  dict({
    'artist': 'Samario (Making A Mistake)',
    'artist_tokens': list([
      'Samario',
    ]),
    'authors': list([
      'Samario (Making A Mistake)',
    ]),
    'description': '''
      One Uncued Tresillo
      (song edited from [...]Machinegun Psystyle[...], by Camellia)
    ''',
    'description_ct': list([
      dict({
        'color': 'default',
        'len': 81,
      }),
    ]),
    'difficulty': 0,
    'has_classics': False,
    'has_freetimes': True,
    'has_freezeshots': False,
    'has_holds': False,
    'has_oneshots': False,
    'has_skipshots': False,
    'has_squareshots': False,
    'has_window_dance': False,
    'hue': 0,
    'id': 'one-uncu-i64TVVfB93P',
    'last_updated': datetime.datetime(2022, 6, 27, 21, 27, 12),
    'max_bpm': 70,
    'min_bpm': 40,
    'rdlevel_sha1': '45b791ffa43c995db620315f968047c6d9c7bb21',
    'seizure_warning': False,
    'sha1': '03a597ff04c86c751e6b12d79d6308b18d1c68f3',
    'single_player': True,
    'song': 'One Uncued Tresillo',
    'song_ct': list([
      dict({
        'color': 'default',
        'len': 19,
      }),
    ]),
    'tags': list([
      'uncued tresillo',
      'samario please stop doing this',
    ]),
    'two_player': True,
  })
# ---
# name: test_snapshot[C:/Users/auburn/PycharmProjects/rd-indexer/orchard/vitals/test/fixtures\\Samario_Making_A_Mistake_-_One_Uncued_Tresillo orig.rdzip]
  dict({
    'artist': 'Samario (Making A Mistake)',
    'artist_tokens': list([
      'Samario (Making A Mistake)',
    ]),
    'authors': list([
      'Samario (Making A Mistake)',
    ]),
    'description': '''
      One Uncued Tresillo
      (song edited from [...]Machinegun Psystyle[...], by Camellia)
    ''',
    'description_ct': list([
      dict({
        'color': 'default',
        'len': 81,
      }),
    ]),
    'difficulty': 0,
    'has_classics': False,
    'has_freetimes': True,
    'has_freezeshots': False,
    'has_holds': False,
    'has_oneshots': False,
    'has_skipshots': False,
    'has_squareshots': False,
    'has_window_dance': False,
    'hue': 0,
    'id': 'one-uncu-eqSkB1ZX7Xz',
    'last_updated': datetime.datetime(2021, 1, 2, 3, 52, 10),
    'max_bpm': 160,
    'min_bpm': 160,
    'rdlevel_sha1': '6ff955c37225bb5ed9282b3f813cb16dd7504fd3',
    'seizure_warning': False,
    'sha1': '7546233f165a8842b335404d8df3d977888fce50',
    'single_player': True,
    'song': 'One Uncued Tresillo',
    'song_ct': list([
      dict({
        'color': 'default',
        'len': 19,
      }),
    ]),
    'tags': list([
      'uncued tresillo',
      'samario please stop doing this',
    ]),
    'two_player': True,
  })
# ---
# name: test_snapshot[C:/Users/auburn/PycharmProjects/rd-indexer/orchard/vitals/test/fixtures\\auburnsummer - Triplet Testaaaaa.rdzip]
  dict({
    'artist': 'auburnsummer',
    'artist_tokens': list([
      'auburnsummer',
    ]),
    'authors': list([
      'auburnsummer',
      ' Xeno',
    ]),
    'description': 'A two-handed level. The eloquent blend between thirds and halves.',
    'description_ct': list([
      dict({
        'color': 'default',
        'len': 65,
      }),
    ]),
    'difficulty': 2,
    'has_classics': True,
    'has_freetimes': False,
    'has_freezeshots': False,
    'has_holds': False,
    'has_oneshots': True,
    'has_skipshots': False,
    'has_squareshots': True,
    'has_window_dance': False,
    'hue': 0.66,
    'id': 'triplet-LrxHzPMLamy',
    'last_updated': datetime.datetime(2022, 6, 27, 23, 25, 28),
    'max_bpm': 110,
    'min_bpm': 110,
    'rdlevel_sha1': '7e3f5d28f8865e3e8bc3982b2f72e5d6a9dbddf0',
    'seizure_warning': False,
    'sha1': '4de04dc0c7e6ba30438368cacbd8a24678666841',
    'single_player': True,
    'song': 'Triplet Test',
    'song_ct': list([
      dict({
        'color': 'default',
        'len': 12,
      }),
    ]),
    'tags': list([
      'Piano',
      '2p',
      'Two-handed',
    ]),
    'two_player': False,
  })
# ---
# name: test_snapshot[C:/Users/auburn/PycharmProjects/rd-indexer/orchard/vitals/test/fixtures\\color-ff-XsSFVSBp2hH.rdzip]
  dict({
    'artist': '遊助',
    'artist_tokens': list([
      '遊助',
    ]),
    'authors': list([
      '来因洛特',
    ]),
    'description': '这次的这个谱我真的花了很长时间，大概有......差不多50个小时吧。歌词因为是CC，只能全用平假名了，看起来麻烦也抱歉了...希望这次能取得比上次更好的结果吧。来来回回也看了很多次，感觉想不到有什么能加的了，就这样交了吧。也希望你也能像歌词一样开开心心的，活着本身没有意义，但就是为了知道是为了什么我们才会活着呀。（录的时候请把轨道分成八行）',
    'description_ct': list([
      dict({
        'color': 'default',
        'len': 172,
      }),
    ]),
    'difficulty': 0,
    'has_classics': True,
    'has_freetimes': True,
    'has_freezeshots': False,
    'has_holds': False,
    'has_oneshots': False,
    'has_skipshots': False,
    'has_squareshots': False,
    'has_window_dance': False,
    'hue': 0.17,
    'id': 'color-ff-XsSFVSBp2hH',
    'last_updated': datetime.datetime(2022, 8, 25, 22, 29, 56),
    'max_bpm': 138,
    'min_bpm': 138,
    'rdlevel_sha1': 'a04ccd13fb8ab685880d4223737d943c0e494376',
    'seizure_warning': True,
    'sha1': '72b6e91fe98ff2db4b5f6ff08d75eb0fda71eca1',
    'single_player': True,
    'song': '''
      一笑懸命
    ''',
    'song_ct': list([
      dict({
        'color': '#FF7C8A',
        'len': 1,
      }),
      dict({
        'color': '#FECD66',
        'len': 1,
      }),
      dict({
        'color': '#C3F3FD',
        'len': 1,
      }),
      dict({
        'color': '#FFA3D6',
        'len': 1,
      }),
      dict({
        'color': 'default',
        'len': 1,
      }),
    ]),
    'tags': list([
      'easy',
      'CNcompo 1',
      'relaxing',
      'lyrics',
    ]),
    'two_player': False,
  })
# ---
# name: test_snapshot[C:/Users/auburn/PycharmProjects/rd-indexer/orchard/vitals/test/fixtures\\placeboing_-_BANAS.rdzip]
  dict({
    'artist': 'placeboing',
    'artist_tokens': list([
      'placeboing',
    ]),
    'authors': list([
      "April's Only Fool",
    ]),
    'description': '''
      This level works under the assumption that you know how 8beat, 6beat, and Temporal Shift works.
      
      Hope you all have a wonderful April Fools Day!
      
      Hollaback Girl by Gwen Stefani x Donkey Kong Country 2 OST
      
      Banana CC by Pyre
      Banana Tile by Het
    ''',
    'description_ct': list([
      dict({
        'color': 'default',
        'len': 241,
      }),
    ]),
    'difficulty': 1,
    'has_classics': True,
    'has_freetimes': True,
    'has_freezeshots': False,
    'has_holds': False,
    'has_oneshots': True,
    'has_skipshots': True,
    'has_squareshots': False,
    'has_window_dance': False,
    'hue': 0.17,
    'id': 'banas-QbMoyaG2nfK',
    'last_updated': datetime.datetime(2022, 4, 9, 16, 40, 34),
    'max_bpm': 147,
    'min_bpm': 143.5,
    'rdlevel_sha1': '77bc7d7ea5203e1befdf0bc24ae2fad0e5b0346e',
    'seizure_warning': False,
    'sha1': '0c55a1c001072adcfbc9c1946dbee439b091f00f',
    'single_player': True,
    'song': 'BANAS',
    'song_ct': list([
      dict({
        'color': 'default',
        'len': 5,
      }),
    ]),
    'tags': list([
      'April Fools',
      'banana',
      'banas',
      'temporal shift',
      '8beat',
      '6beat',
    ]),
    'two_player': False,
  })
# ---
# name: test_snapshot[C:/Users/auburn/PycharmProjects/rd-indexer/orchard/vitals/test/fixtures\\toonlink_Kenichi_Nishikami_Takeru_Kanazaki_-_Jimmys_Aesthetics.rdzip]
  dict({
    'artist': 'toonlink, Kenichi Nishikami, Takeru Kanazaki',
    'artist_tokens': list([
      'toonlink',
      'Kenichi Nishikami',
      'Takeru Kanazaki',
    ]),
    'authors': list([
      'Szprycha',
    ]),
    'description': 'A neat song from WarioWare DIY',
    'description_ct': list([
      dict({
        'color': 'default',
        'len': 30,
      }),
    ]),
    'difficulty': 1,
    'has_classics': True,
    'has_freetimes': False,
    'has_freezeshots': False,
    'has_holds': False,
    'has_oneshots': True,
    'has_skipshots': False,
    'has_squareshots': False,
    'has_window_dance': False,
    'hue': 0.19,
    'id': 'jimmy-s-Ccby1RK3XJK',
    'last_updated': datetime.datetime(2020, 6, 20, 23, 9, 28),
    'max_bpm': 125,
    'min_bpm': 125,
    'rdlevel_sha1': 'd61958f09545cf365b4d0c23d12ace8942bc20ec',
    'seizure_warning': False,
    'sha1': '857f166d1a8d30a2bd810de4113eb19260acab5e',
    'single_player': True,
    'song': "Jimmy's Aesthetics",
    'song_ct': list([
      dict({
        'color': 'default',
        'len': 18,
      }),
    ]),
    'tags': list([
      'siivagunner',
      'nintendo',
      'warioware',
      'body rock',
    ]),
    'two_player': False,
  })
# ---
